<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/color_B_Green"
    tools:context=".BActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/B_is_running"
        android:textSize="40sp"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/start_A_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/start_A_button"/>
        <Button
            android:id="@+id/start_C_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/start_C_button"/>
        <Button
            android:id="@+id/finish_B_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/finish_B_button"/>
        <Button
            android:id="@+id/show_dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/show_dialog_button"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="left"
        android:textSize="17dp"
        android:layout_gravity="left"
        android:text="@string/Lifecycle_method_list"
        android:textColor="@color/color_Textbackground"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <TextView
            android:id="@+id/BT1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@color/color_Textbackground"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:textSize="17dp"
        android:layout_gravity="left"
        android:text="@string/activity_status"
        android:textColor="@color/color_Textbackground"/>

    <TextView
        android:id="@+id/BT2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/color_Textbackground"
        android:gravity="left"/>

</LinearLayout>